--- a/index6.html
+++ b/index6.html
@@ -1,27 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend project</title>
-    <link rel="stylesheet" href="style6.css" />
-  </head>
-  <body class="big neutral-50">
-    <div id="=next"></div>
+<!DOCTYPE html> 
 
-    <img src="perf.html.jpg"
-    alt=" a descriptive alt text"
-    width="250" height="350"> 
-    <code>
-    <h1>PERFUME</h1>
-    <p>Gabrielle Essence Eau De Perfume</p>
-    <p>A floral ,solar and voluptuous interpretation composed by Olivier polge,perfumercreator for heHouse of CHANEL</p>
-    <div class="price"> <p> 
-      <p>$149.99</p>
-      <del> $169.99</del>
+<html lang="en"> 
 
-    </p></div>
-   
-  </code>
-  </body>
-</html>
+<head> 
+
+    <meta charset="UTF-8"> 
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
+    <title>Product Preview Card</title> 
+
+    <link rel="stylesheet" href="style6.css"> 
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+
+    <!-- You might want to link Google Fonts here if using custom fonts like Fraunces and Montserrat --> 
+
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet"> --> 
+
+</head> 
+
+<body> 
+
+    <main class="product-card-container"> 
+
+        <div class="product-card"> 
+
+            <div class="product-image"> 
+
+                <img src="perf.html.jpg" width="389" height="200"
+                alt="Gabrielle Essence Eau De Parfum"> 
+
+                <!-- For responsive design, consider using the <picture> element with mobile and desktop images --> 
+
+                <!-- <picture> 
+
+                    <source media="(max-width: 600px)" srcset="image-product-mobile.jpg"> 
+
+                    <img src="image-product-desktop.jpg" alt="Gabrielle Essence Eau De Parfum"> 
+
+                </picture> --> 
+
+            </div> 
+
+            <div class="product-details"> 
+
+                <p class="category">PERFUME</p> 
+                  <h1>Gabrielle Essence Eau De Parfum</h1> 
+
+                <p class="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p> 
+
+                <div class="prices"> 
+
+                    <span class="current-price">$149.99</span> 
+
+                    <span class="old-price">$169.99</span> 
+
+                </div> 
+
+                <button class="add-to-cart-btn"> 
+
+                    <i class='bx  bx-cart-plus'  ></i> 
+
+                    Add to Cart 
+
+                </button> 
+
+            </div> 
+
+        </div> 
+
+    </main> 
+
+</body> 
+
+</html> 
+
+ 
