my first business insight

--- a/litle.html
+++ b/litle.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="widt
-
-   
-h=device-width, initial-scale=1.0">
-    <title>Login form in html and css/ afric code</title>
-    <link rel="stylesheet" href="mish.ss">
-    <link rel="stylesheet" href="">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-     
+    
 </body>
-</html> 
+</html>
